# sync_gateway

./: .droid.yaml  .drone.yml  .editorconfig  .gitignore  .gitmodules  .golangci-strict.yml  .golangci.yml  .groovylintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .redocly.yaml  .tm_properties  .travis.yml  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DUMMY  Dockerfile  Jenkinsfile  Jenkinsfile.new01  Jenkinsfile.old01  LICENSE  Makefile  README.md  all_tests2.sh  attachment.go  attachment_test.go  auth.go  auth_test.go  authrest.go  bench.sh  bootstrap.sh  browserid.go  build.sh  changes.go  changes_test.js  channelmapper.go  channelmapper_test.go  (+56 more)
.factory/: settings.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
auth/: auth.go  auth_test.go  auth_time_sensitive_test.go  cache.go  cache_test.go  client_cert.go  client_cert_test.go  collection_access.go  collection_access_test.go  cors.go  docker_integration_test.go  error.go  jwt.go  jwt_test.go  jwt_test_utils.go  jwtmock.go  jwtmock_test.go  main_caller_test.go  main_test.go  oidc.go  oidc_provider.go  oidc_provider_test.go  oidc_test.go  oidc_verify.go  password_hash.go  password_hash_test.go  principal.go  role.go  role_collection_access.go  role_test.go  session.go  session_test.go  user.go  user_collection_access.go  user_test.go
base/: abstract_dcp_client.go  append_only_list.go  audit_events.go  audit_events_fields.go  audit_events_test.go  audit_fields.go  audit_types.go  auditd_descriptor.go  auditd_descriptor_test.go  auditd_types.go  bootstrap.go  bootstrap_test.go  bucket.go  bucket_gocb.go  bucket_gocb_gocouchbase_hybrid.go  bucket_gocb_multi.go  bucket_gocb_test.go  bucket_n1ql.go  bucket_n1ql_test.go  bucket_test.go  bucket_view_test.go  bucket_xattr.go  cbgt.go  cluster_n1ql.go  collection.go  collection_common.go  collection_gocb.go  collection_gocb_utils.go  collection_n1ql.go  collection_n1ql_common.go  collection_rangescan.go  collection_rangescan_test.go  collection_utils.go  collection_view.go  collection_xattr.go  collection_xattr_common.go  collection_xattr_test.go  config_persistence.go  config_persistence_test.go  connection_string.go  (+186 more)
channels/: active_channels.go  active_channels_test.go  change_log.go  change_log_test.go  channelmapper.go  channelmapper_test.go  channels.go  channels_test.go  docker_integration_test.go  integration_test.go  log_entry.go  main_caller_test.go  main_test.go  range_safe_collection.go  range_safe_collection_test.go  set.go  set_test.go  sync_fn_wrapper.js  sync_fn_wrapper_modern.js  sync_fn_wrapper_older.js  sync_fn_wrapper_otto.js  sync_fn_wrapper_v8.js  sync_runner.go  sync_runner_test.go  timed_set.go  timed_set_test.go  util_testing.go
cli/: install.sh  main.go
db/: access_test.go  active_replicator.go  active_replicator_checkpointer.go  active_replicator_checkpointer_test.go  active_replicator_common.go  active_replicator_common_collections.go  active_replicator_config.go  active_replicator_pull.go  active_replicator_pull_collections.go  active_replicator_push.go  active_replicator_push_collections.go  active_replicator_test.go  assimilator.go  attachment.go  attachment_compaction.go  attachment_compaction_test.go  attachment_test.go  background_mgr.go  background_mgr_async_index_init.go  blip.go  (+175 more)
(+1356 files in other folders)
