[project]
name = "sgcollect_info"
version = "0.0.1"
requires-python = ">3.9,<3.10"

[mypy]
files = ["tools-tests/*.py"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/tools"

[tool.ruff]
extend-include = ["tools/sgcollect_info"]

[tool.ruff.lint]
extend-select = ["I","B006"]  # isort, mutable default argument

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.0",
    "pytest-httpserver>=1.1.3",
    "trustme>=1.2.1",
]
